add_executable(testcase1 testcase1.cc)
target_link_libraries(testcase1 sim_ooo)

add_executable(testcase2 testcase2.cc)
target_link_libraries(testcase2 sim_ooo)

add_executable(testcase3 testcase3.cc)
target_link_libraries(testcase3 sim_ooo)

add_executable(testcase4 testcase4.cc)
target_link_libraries(testcase4 sim_ooo)

add_executable(testcase5 testcase5.cc)
target_link_libraries(testcase5 sim_ooo)

add_executable(testcase6 testcase6.cc)
target_link_libraries(testcase6 sim_ooo)

add_executable(testcase7 testcase7.cc)
target_link_libraries(testcase7 sim_ooo)

add_executable(testcase8 testcase8.cc)
target_link_libraries(testcase8 sim_ooo)

add_executable(testcase9 testcase9.cc)
target_link_libraries(testcase9 sim_ooo)

add_executable(testcase10 testcase10.cc)
target_link_libraries(testcase10 sim_ooo)
